yet another notebook

--- a/too/start_too_metric.ipynb
+++ b/too/start_too_metric.ipynb
@@ -328,8 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e47cdab8-22cb-4294-89a4-868d92a3ef54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is running a UserPointSlicer that loops over each ToO\n",
+    "# We could to a UserPointSlice per ToO event, and check each HEALpix within some radius of the ToO. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f288a87-d32d-460d-9337-e746401ba729",
    "metadata": {},
    "outputs": [],
    "source": []
