--- a/too/start_too_metric.ipynb
+++ b/too/start_too_metric.ipynb
@@ -117,7 +117,7 @@
     "                                                                                                                                   \n",
     "        # Can put more stringent detection/classification constraints here\n",
     "        # if there's a desire for multiple detection criteria, then we can swap result to a dict and use reduce methods.\n",
-    "        \n",
+    "        # Here is a very very simple criteria, did we get more than three observations, if so, call the point good.\n",
     "        if np.size(obs_in_time) >= 3:\n",
     "            result = 1\n",
     "        return result\n",
