--- a/too/too_check.ipynb
+++ b/too/too_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "28655592-ba26-4e6a-b0d8-742ea8b89bab",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a37646c-9c60-4ef6-8631-15ad70bf37fa",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "f61f15c0-909e-47f3-bdea-aeb00ff45f6b",
    "metadata": {},
    "outputs": [
@@ -102,29 +102,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Number ToO events generated =  1000\n",
       "Number of t0 blobs taken =  311\n",
       "Number of t4 taken =  209\n",
-      "Number ToO visits =  [99057]\n"
+      "Number ToO visits =  99057\n"
      ]
     }
    ],
    "source": [
     "con = sqlite3.connect(filename)\n",
     "\n",
-    "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t0\"', con)\n",
+    "df = pd.read_sql('select count(mjd_start) from events;', con)\n",
+    "print('Number ToO events generated = ',df.values[0].max())\n",
     "\n",
+    "\n",
+    "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t0\"', con)\n",
     "print('Number of t0 blobs taken = ', np.size(df.values))\n",
     "\n",
     "\n",
     "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t4\"', con)\n",
-    "\n",
     "print('Number of t4 taken = ', np.size(df.values))\n",
     "\n",
     "\n",
     "\n",
     "df = pd.read_sql('select count(night) from observations where note like \"%%_t%%\"', con)\n",
+    "print('Number ToO visits = ',df.values[0].max())\n",
     "\n",
-    "print('Number ToO visits = ',df.values[0])\n",
     "\n",
     "con.close()"
    ]
