--- a/too/too_presto.ipynb
+++ b/too/too_presto.ipynb
@@ -27,7 +27,6 @@
     "# databases at https://s3df.slac.stanford.edu/groups/rubin/static/sim-data/sims_featureScheduler_runs3.4/too/\n",
     "db_file = 'too_100_4v3.4_10yrs.db'\n",
     "run_name = db_file.replace('.db', '')\n",
-    "\n",
     "out_dir = 'temp'\n",
     "results_db = maf.db.ResultsDb(out_dir=out_dir)"
    ]
@@ -53,6 +52,11 @@
    "outputs": [],
    "source": [
     "# Generate a slicer to look at each event\n",
+    "# This just looks at the center. In theory, we might want to look at the extended area\n",
+    "# around the ToO event. In practice, I think this should all average out. E.g.,\n",
+    "# sometimes the ToO event will land on a field overlap, sometimes it will land on a chip gap\n",
+    "# sometimes it gets all the requested observations, sometimes it doesn't, etc. \n",
+    "# Sampling at the center should be about as good as taking many samples and averaging. \n",
     "def gen_too_slicer(mjd_starts, ra_rad, dec_rad, file_indx=0, distance=50):\n",
     "    slicer = UserPointsSlicer(np.degrees(ra_rad), np.degrees(dec_rad), lat_lon_deg=True, badval=0)\n",
     "    slicer.slice_points[\"peak_time\"] = mjd_starts\n",
@@ -66,68 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1da3f695-ef50-4cb9-a6e7-47890a4e8045",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TooRecoverMetric(BaseMetric):\n",
-    "    \"\"\"See how well a ToO event was observed, and if it can be seperated from\n",
-    "    other transient events. Wrap the PrestoColorKNePopMetric metric\n",
-    "\n",
-    "    \"\"\"\n",
-    "    def __init__(self, metric_name=\"ToORecover\", m5_col=\"fiveSigmaDepth\",\n",
-    "        filter_col=\"filter\", mjd_col=\"observationStartMJD\", time_pad=30,\n",
-    "                 badval=0, **kwargs):\n",
-    "\n",
-    "        maps = [\"DustMap\"]\n",
-    "        self.mjd_col = mjd_col\n",
-    "        self.m5_col = m5_col\n",
-    "        self.filter_col = filter_col\n",
-    "        \n",
-    "        self.time_pad = time_pad\n",
-    "\n",
-    "        cols = [self.mjd_col, self.m5_col, self.filter_col]\n",
-    "\n",
-    "        self.presto_metric = maf.PrestoColorKNePopMetric(mjd_col=mjd_col,\n",
-    "        m5_col=m5_col, filter_col=filter_col, mjd0=0, skyregion=\"extragalactic\",)\n",
-    "        \n",
-    "        super(TooRecoverMetric, self).__init__(\n",
-    "            col=cols,\n",
-    "            units=\"Detected, 0 or 1\",\n",
-    "            metric_name=metric_name,\n",
-    "            maps=maps,\n",
-    "            badval=badval,\n",
-    "            **kwargs,\n",
-    "        )\n",
-    "\n",
-    "    def run(self, data_slice, slice_point=None):\n",
-    "        result = 0\n",
-    "\n",
-    "        # XXXX--not needed, metric does it's own cut.\n",
-    "        # Only pass in visits that are within some time range of the event\n",
-    "        #obs_in_time = np.where( (data_slice[self.mjd_col] >= (slice_point[\"peak_time\"]-self.time_pad)) & \n",
-    "        #                        (  data_slice[self.mjd_col] <= (slice_point[\"peak_time\"]+self.time_pad)))[0]\n",
-    "\n",
-    "\n",
-    "        \n",
-    "        sub_slice = data_slice #data_slice[obs_in_time]\n",
-    "        if np.size(sub_slice) == 0:\n",
-    "            return self.badval\n",
-    "        # Could nominally swap self.presto_metric.skyregion here\n",
-    "        # as needed between galactic/extragalactic. Or have\n",
-    "        # two metrics and decide which one to call.\n",
-    "        result = self.presto_metric.run(sub_slice, slice_point=slice_point)\n",
-    "        # for now let's just use scoreP\n",
-    "        result = result[\"scoreP\"]\n",
-    "        \n",
-    "        return result\n",
-    "        \n",
-    "                               "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "30c2457c-520e-4b28-a230-9990ca196e94",
    "metadata": {},
    "outputs": [],
@@ -135,23 +77,29 @@
     "bundle_list = []\n",
     "\n",
     "slicer = gen_too_slicer(too_events[\"mjd_start\"].values, too_events[\"ra\"].values, too_events[\"dec\"].values)\n",
-    "#metric = TooRecoverMetric()\n",
-    "\n",
     "metric = maf.PrestoColorKNePopMetric(mjd0=0, skyregion=\"extragalactic\",)\n",
+    "\n",
+    "summary = [\n",
+    "    # XXX--maybe this should be a probability sum?\n",
+    "        metrics.SumMetric(metric_name=\"Total detected\"),\n",
+    "        metrics.CountMetric(metric_name=\"Total lightcurves in footprint\"),\n",
+    "        metrics.CountMetric(metric_name=\"Total lightcurves on sky\", mask_val=0),\n",
+    "        metrics.MeanMetric(mask_val=0, metric_name=\"Fraction detected of total (mean)\"),\n",
+    "    ]\n",
     "\n",
     "bundle = maf.MetricBundle(\n",
     "        metric,\n",
     "        slicer,\n",
     "        \"\",\n",
     "        run_name=run_name,\n",
-    "        summary_metrics=[],\n",
+    "        summary_metrics=summary,\n",
     "    )\n",
     "bundle_list.append(bundle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8da2218a-b411-4a55-956e-a99387cc4f80",
    "metadata": {},
    "outputs": [
@@ -233,30 +181,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "87903760-62c1-40b4-ba47-42d561763704",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'too_100_4v3_4_10yrs_KNePopMetric_USER': <rubin_sim.maf.metric_bundles.metric_bundle.MetricBundle at 0x107e6c850>,\n",
+       " 'KNePopMetric_presto_color_detect': <rubin_sim.maf.metric_bundles.metric_bundle.MetricBundle at 0x157339950>,\n",
+       " 'KNePopMetric_score_p': <rubin_sim.maf.metric_bundles.metric_bundle.MetricBundle at 0x1572e2810>,\n",
+       " 'KNePopMetric_score_s': <rubin_sim.maf.metric_bundles.metric_bundle.MetricBundle at 0x1577a6250>}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#np.sum(np.round(bundle_list[0].metric_values))"
+    "bd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f887c06c-e49a-404f-8f11-4ddf8a27f555",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Total detected': 221.72003019223445,\n",
+       " 'Total lightcurves in footprint': 689,\n",
+       " 'Total lightcurves on sky': 1000,\n",
+       " 'Fraction detected of total (mean)': 0.22172003019223444}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# before, 50Mpc --> 223 recovered\n",
-    "# If I put them at 1 Mpc --> 247 (and runs slower?)\n",
-    "# 500 MPC, down to 10."
+    "bd['KNePopMetric_score_p'].summary_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "87b2c7ef-054f-469a-87cd-4fcde04a2678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Total detected': 200.0,\n",
+       " 'Total lightcurves in footprint': 689,\n",
+       " 'Total lightcurves on sky': 1000,\n",
+       " 'Fraction detected of total (mean)': 0.2}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bd['KNePopMetric_score_s'].summary_values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b2c7ef-054f-469a-87cd-4fcde04a2678",
+   "id": "ac417b50-0bb5-492a-b585-853b90a625bf",
    "metadata": {},
    "outputs": [],
    "source": []
