--- a/baseline/ddf_example_sched.ipynb
+++ b/baseline/ddf_example_sched.ipynb
@@ -872,9 +872,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0c5380e-1c36-40ef-8891-e9e4e53d8ead",
+   "metadata": {},
+   "source": [
+    "This array then gets loaded into a `ScriptedSurvey` object, which can then include additional spatial and rotational dithering commands and rules for avoiding wind."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d3d178a-0f87-43a3-98bc-2c0b927496f8",
+   "id": "c23f9ec2-5eff-442c-a528-840347ac0852",
    "metadata": {},
    "outputs": [],
    "source": []
