--- a/too_elab/too_check.ipynb
+++ b/too_elab/too_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "28655592-ba26-4e6a-b0d8-742ea8b89bab",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a37646c-9c60-4ef6-8631-15ad70bf37fa",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f61f15c0-909e-47f3-bdea-aeb00ff45f6b",
    "metadata": {},
    "outputs": [
@@ -103,8 +103,11 @@
      "output_type": "stream",
      "text": [
       "Number ToO events generated =  640\n",
-      "Number of t0 blobs taken =  223\n",
+      "Number of t1 blobs taken =  223\n",
+      "Number of t2 blobs taken =  199\n",
       "Number of t4 taken =  146\n",
+      "Number of t24 blobs taken =  145\n",
+      "Number of t48 blobs taken =  107\n",
       "Number ToO visits =  116477\n"
      ]
     }
@@ -117,12 +120,20 @@
     "\n",
     "\n",
     "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t1\"', con)\n",
-    "print('Number of t0 blobs taken = ', np.size(df.values))\n",
+    "print('Number of t1 blobs taken = ', np.size(df.values))\n",
     "\n",
+    "\n",
+    "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t2\"', con)\n",
+    "print('Number of t2 blobs taken = ', np.size(df.values))\n",
     "\n",
     "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t4\"', con)\n",
     "print('Number of t4 taken = ', np.size(df.values))\n",
     "\n",
+    "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t24\"', con)\n",
+    "print('Number of t24 blobs taken = ', np.size(df.values))\n",
+    "\n",
+    "df = pd.read_sql('select distinct(note) from observations where note like \"%%_t48\"', con)\n",
+    "print('Number of t48 blobs taken = ', np.size(df.values))\n",
     "\n",
     "\n",
     "df = pd.read_sql('select count(night) from observations where note like \"%%_t%%\"', con)\n",
