make long respect perscheduled obs

--- a/too_combined/check_too_times.ipynb
+++ b/too_combined/check_too_times.ipynb
@@ -161,8 +161,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "131d950a-92e3-4be6-b615-3b5f58c66b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0],\n",
+       "       [4762],\n",
+       "       [5386],\n",
+       "       [5421],\n",
+       "       [5518],\n",
+       "       [7180],\n",
+       "       [9037]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "too_n\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283a6d00-4dd8-4646-821d-f97af2ff0a15",
    "metadata": {},
    "outputs": [],
    "source": []
