--- a/too_combined/too_visits.ipynb
+++ b/too_combined/too_visits.ipynb
@@ -14,12 +14,15 @@
     "%matplotlib inline\n",
     "import healpy as hp\n",
     "\n",
-    "import rubin_sim.maf as maf"
+    "import rubin_sim.maf as maf\n",
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "84c44eb9-4dcd-41d2-8adf-df682aef5226",
    "metadata": {},
    "outputs": [],
@@ -182,13 +185,98 @@
     "bg = maf.metricBundles.MetricBundleGroup(bd, filename, out_dir=out_dir, results_db=results_db)\n",
     "bg.run_all()\n",
     "bg.plot_all(closefigs=False)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "69fb4fa7-cdb0-4716-a528-53fd6ed057a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n",
+      "46\n",
+      "157\n"
+     ]
+    }
+   ],
+   "source": [
+    "types = ['GW']\n",
+    "\n",
+    "con = sqlite3.connect(filename)\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%GW%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%neu%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%SSO%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "\n",
+    "con.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "df4db8e1-2226-4e31-abc4-e6e2facb8da8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "106\n",
+      "46\n",
+      "153\n"
+     ]
+    }
+   ],
+   "source": [
+    "types = ['GW']\n",
+    "\n",
+    "con = sqlite3.connect('too_combined_s2.0_v3.4_10yrs.db')\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%GW%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%neu%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "df = pd.read_sql(\"select distinct(note) from observations where note like '%ToO%SSO%'\", con)\n",
+    "print(np.unique([note.split(',')[-1].split('_')[0] for note in df['note']]).size)\n",
+    "\n",
+    "\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fbf93dc-e58c-44cd-b279-a74fa6ca9b5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4e7a51-b241-4367-9387-97482903118b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddfad120-8753-459e-8b97-061d83b5360b",
    "metadata": {},
    "outputs": [],
    "source": []
