--- a/maf/early_science.ipynb
+++ b/maf/early_science.ipynb
@@ -235,7 +235,8 @@
    "metadata": {},
    "source": [
     "# Early Templates in the NES\n",
-    "\n"
+    "\n",
+    "A new blob-survey is added to ensure templates are gathered earlier in the NES. This survey shuts down after year 1. The impact is fairly negligable, and it does look like it manages to get coverage of the NES faster than the baseline."
    ]
   },
   {
@@ -402,7 +403,9 @@
    "id": "a42c8006-22fd-4e0d-bc8c-f712c11f2907",
    "metadata": {},
    "source": [
-    "# Taking some extra u-band in the north in year 1"
+    "# Taking some extra u-band in the north in year 1\n",
+    "\n",
+    "There are requests to cover a northern section of the Rubin footprint in u earlier than normal (I think for DESI overlap). Since we take very few u band obserations, turning this up has a very small impact on the rest of the survey. The exact details of the footprint overlap are TBD, I just picked a reasonable sounding declination limit."
    ]
   },
   {
